1. Allow a reddit to have a cname, like www.proggit.com, that renders    the listing for that reddit
2. Allow a reddit to have a custom CSS stylesheet that appears to
   visitors

3. Allow a reddit to upload a custom reddit alien logo

--- a/r2/r2/public/static/ad_default.html
+++ b/r2/r2/public/static/ad_default.html
@@ -39,7 +39,7 @@ document.write('<script language="JavaScript" src="http://ad.doubleclick.net/adj
 </div>
 
 <div id="adlink">
-<a target="_parent" href="#" onclick="rwt(this)">reddit this ad</a>
+<a target="_top" href="#" onclick="rwt(this)">reddit this ad</a>
 </div>
 
 </body>
