changes to iphone.html by alexis

--- a/r2/r2/public/static/iphone/index.html
+++ b/r2/r2/public/static/iphone/index.html
@@ -162,16 +162,17 @@ h2 {
 <img src="iredditlogo.png" style="margin-bottom: 13px;">
 
 <p id="big">
-The best of the web is in your hand.<br>And you can even shake it
+The best of the web is in your hand.<br>
+And you can even shake it
 <br>
 <span style="line-height: 1.8em; font-size:.5em;">
-<script lanugage="JavaScript">document.write(quote);</script> 
+<script lanugage="JavaScript">document.write(quote);</script> 
 </span>
 <br>
 for a random, cool link.
 </p>
 
-<a href=""><img border="0" src="getapp.png"></a>
+<a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=302732279&mt=8"><img border="0" src="getapp.png"></a>
 
 <p>
 Buy the iReddit app for $1.99 and you'll never see an ad on it.
@@ -221,7 +222,7 @@ While in Serendipity mode, you will keep getting fed random stories to view/vote
 
 </div>
 
-<a href=""><img border="0" src="getapp.png"></a>
+<a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=302732279&mt=8"><img border="0" src="getapp.png"></a>
 
 </div>
 
