fix browser language behavior by preserving order.  Also style fix to iphone page.

--- a/r2/r2/public/static/iphone/index.html
+++ b/r2/r2/public/static/iphone/index.html
@@ -190,14 +190,14 @@ for a random, cool link.
 </p>
 
 <div style="margin-bottom: 40px;">
-<a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=302732279&amp;mt=8"><img style="float:left; margin-right: 10px;margin-bottom: 10px;" src="iReddit-thumb.png"></a>
+<a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=302732279&amp;mt=8"><img style="float:left; margin-right: 10px;margin-bottom: 10px; border: none" src="iReddit-thumb.png"></a>
 <p>
 Buy the iReddit app for just $.99 and you'll never see an ad on it. It comes with a ton of sound effects for your shaking pleasure and will let you aggregate up to 500 reddit subscriptions.
 </p>
 <a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=302732279&amp;mt=8"><img src="getapp.png" border="0"></a>
 </div>
 
-<div><a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=321405188&mt=8"><img style="float:left; margin-right: 10px;margin-bottom: 10px;" src="iRedditFree-thumb.png"></a>
+<div><a href="http://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=321405188&mt=8"><img style="float:left; margin-right: 10px;margin-bottom: 10px; border: none" src="iRedditFree-thumb.png"></a>
 <p>
 Feeling hesitant? Try the free version of iReddit. You just get one sound effect, though it is cool, and you can aggregate only 100 of your reddit subscriptions.
 </p>
