--- a/r2/r2/public/static/button/button1.html
+++ b/r2/r2/public/static/button/button1.html
@@ -5,13 +5,9 @@
     <meta name="keywords" content=" reddit, reddit.com, vote, comment, submit " />
     <meta name="title" content=" reddit buttons " />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <script src="/static/js/jquery.js?v=930854757635" type="text/javascript">
-    </script>
-    <script src="/static/js/jquery.reddit.js?v=525082010278" 
-            type="text/javascript">
-    </script>
-    <script src="/static/js/blogbutton.js" type="text/javascript">
-    </script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+    <script src="/static/js/jquery.reddit.js" type="text/javascript"></script>
+    <script src="/static/js/blogbutton.js" type="text/javascript"></script>
     <script type="text/javascript">
       var reddit = {};
       point_label = function(x) {
