--- a/r2/r2/public/static/button/button2.html
+++ b/r2/r2/public/static/button/button2.html
@@ -8,12 +8,9 @@
     <script type="text/javascript">
       var reddit = { };
     </script>
-    <script src="/static/js/jquery.js"
-            type="text/javascript"></script>
-    <script src="/static/js/jquery.reddit.js"
-            type="text/javascript"></script>
-    <script src="/static/js/blogbutton.js" type="text/javascript">
-    </script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+    <script src="/static/js/jquery.reddit.js" type="text/javascript"></script>
+    <script src="/static/js/blogbutton.js" type="text/javascript"></script>
     <link rel="stylesheet" href="/static/css/reddit.css" 
           type="text/css" />
     <link rel='shortcut icon' href="/static/favicon.ico" 
