--- a/r2/r2/public/static/button/button4.html
+++ b/r2/r2/public/static/button/button4.html
@@ -6,11 +6,8 @@
     <meta name="title" content=" reddit buttons " />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script type="text/javascript">var reddit = { };</script>
-    <script src="/static/js/jquery.js" type="text/javascript">
-    </script>
-    <script src="/static/js/jquery.reddit.js"
-            type="text/javascript">
-    </script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
+    <script src="/static/js/jquery.reddit.js" type="text/javascript"></script>
     <script src="/static/js/blogbutton.js" type="text/javascript">
     </script>
     <link rel="stylesheet" href="/static/css/reddit.css"
